--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 	</style>
 </head>
 <body>
+	<div id="svgContainer"></div>
+	<div id="test"></div>
 	
-
+	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="d3.v3.min.js" charset="utf-8"></script>
 	<script>
 		
@@ -45,14 +47,14 @@
 		var force = d3.layout.force()
 		    .size([width, height])
 		    .charge(-200)
-		    .linkDistance(100)
+		    .linkDistance(90)
 		    .gravity(0.1)
 		    .on("tick", tick);
 
 		var drag = force.drag()
 		    .on("dragstart", dragstart);
 
-		var svg = d3.select("body").append("svg")
+		var svg = d3.select("body #svgContainer").append("svg")
 		    .attr("width", width)
 		    .attr("height", height);
 
@@ -100,21 +102,14 @@
 		      .attr("x2", function(d) { return d.target.x; })
 		      .attr("y2", function(d) { return d.target.y; });
 
+		  node.attr("cx", function(d) { return d.x = Math.max(15, Math.min(width - 15, d.x)); })
+    			.attr("cy", function(d) { return d.y = Math.max(15, Math.min(height - 15, d.y)); });
 
+		   d3.selectAll("circle").attr("cx", function (d) {return d.x; })
+		        .attr("cy", function (d) { return d.y; });
 
-		      d3.selectAll("circle").attr("cx", function (d) {
-		        return d.x;
-		    })
-		        .attr("cy", function (d) {
-		        return d.y;
-		    });
-
-		    d3.selectAll("text").attr("x", function (d) {
-		        return d.x;
-		    })
-		        .attr("y", function (d) {
-		        return d.y;
-		    });
+		    d3.selectAll("text").attr("x", function (d) {return d.x; })
+		        .attr("y", function (d) { return d.y; });
 		}
 
 		function dblclick(d) {
@@ -125,8 +120,18 @@
 		  d3.select(this).classed("fixed", d.fixed = true);
 		}
 
-
-
+		/*
+		var body = $("body > #test");
+		var pA = [];
+		for (var bapt = 0; bapt < 20 ; bapt++) {
+			var p = $('<p/>');
+  			p.html("jquery elements #" + bapt);
+  			p.css("color", color(bapt));
+  			pA.push(p);
+		}
+		body.append(pA);
+		*/
 	</script>
+
 </body>
 </html>
