--- a/index.html
+++ b/index.html
@@ -37,18 +37,27 @@
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="d3.v3.min.js" charset="utf-8"></script>
 	<script>
-		
-		var width = 1800,
-		    height = 900;
+		var w = window,
+		    d = document,
+		    e = d.documentElement,
+		    g = d.getElementsByTagName('body')[0],
+		    width = w.innerWidth || e.clientWidth || g.clientWidth,
+		    height = w.innerHeight|| e.clientHeight|| g.clientHeight;
+		    height -= 26;
+		//var width = 1800,
+		//    height = 900;
 
 	    //Set up the colour scale
 		var color = d3.scale.category20c();
+
+		// radius processing
+		var radius = d3.scale.linear().domain([0, 100]).range(["12", "40"]);
 
 		var force = d3.layout.force()
 		    .size([width, height])
 		    .charge(-200)
 		    .linkDistance(90)
-		    .gravity(0.1)
+		    .gravity(0.05)
 		    .on("tick", tick);
 
 		var drag = force.drag()
@@ -83,33 +92,51 @@
 		    .call(drag);
 
 		    node.append("circle")
-		      .attr("r", 12)
+		      .attr("r", function(d) { return (d.big == undefined || d.big == null) ? 12 : radius(d.big)})
 		      .style("fill", function (d) {
 				    return color(d.group);
 				})
 		      .on("click", dblclick);
 
 		      node.append("text")
-		      .attr("dx", 10)
+		      .attr("dx", function(d) { return (d.big == undefined || d.big == null) ? 10 : radius(d.big)})
 		      .attr("dy", ".35em")
 		      .text(function(d) { return d.label });
 
 		});
 
 		function tick() {
-		  link.attr("x1", function(d) { return d.source.x; })
+		  
+
+		  //node.attr("cx", function(d) { return d.x = Math.max(15, Math.min(width - 15, d.x)); })
+    		//	.attr("cy", function(d) { return d.y = Math.max(15, Math.min(height - 15, d.y)); });
+
+		   d3.selectAll("circle").attr("cx", function (d) {
+			   		tempX = d.x;
+			   		if (d.fixedX != undefined && d.fixedX != null && d.fixedX != "") {
+			   		//	fixedX = (d.fixedX == undefined || d.fixedX == null) ? d.x : d.fixedX;
+			   			tempX = d.fixedX * width / 100;
+			   		}
+			   		tempX = Math.max(15, Math.min(width - 15, tempX));
+			   		return d.x =  tempX;
+		   		})
+		        .attr("cy", function (d) { 
+		        	tempY = d.y;
+			   		if (d.fixedY != undefined && d.fixedY != null && d.fixedY != "") {
+			   			//fixedY = (d.fixedY == undefined || d.fixedY == null) ? d.y : d.fixedY;
+			   			tempY = d.fixedY * height / 100;
+			   		}
+			   		tempY = Math.max(15, Math.min(height - 15, tempY));
+			   		return d.y =  tempY;
+		        });
+
+		    d3.selectAll("text").attr("x", function (d) {return d.x = Math.max(15, Math.min(width - 15, d.x)); })
+		        .attr("y", function (d) { return d.y = Math.max(15, Math.min(height - 15, d.y)); });
+
+		    link.attr("x1", function(d) { return d.source.x; })
 		      .attr("y1", function(d) { return d.source.y; })
 		      .attr("x2", function(d) { return d.target.x; })
 		      .attr("y2", function(d) { return d.target.y; });
-
-		  node.attr("cx", function(d) { return d.x = Math.max(15, Math.min(width - 15, d.x)); })
-    			.attr("cy", function(d) { return d.y = Math.max(15, Math.min(height - 15, d.y)); });
-
-		   d3.selectAll("circle").attr("cx", function (d) {return d.x; })
-		        .attr("cy", function (d) { return d.y; });
-
-		    d3.selectAll("text").attr("x", function (d) {return d.x; })
-		        .attr("y", function (d) { return d.y; });
 		}
 
 		function dblclick(d) {
